--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,6 +49,11 @@ body{
   border: 2px solid var(--orange);
 }
 
+.button:disabled{
+  background: silver;
+  pointer-events: none;
+}
+
 ::-webkit-scrollbar{
   display: none;
 }
