--- a/client/src/components/FollowersCard/FollowersCard.css
+++ b/client/src/components/FollowersCard/FollowersCard.css
@@ -37,3 +37,9 @@ h3{
     padding-left: 20px;
     padding-right: 20px;
 }
+.unfollowButton{
+    color: var(--orange);
+    border: 2px solid var(--orange);
+    cursor: pointer;
+    background: transparent 
+}
